@@ -30,7 +30,7 @@ SET (VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}${VERSION_SUFFIX}
 ADD_DEFINITIONS(-D'VERSION="${VERSION}"')
 
 OPTION(ENABLE_PCH "Enable precompiled headers" OFF)
-OPTION(STATIC_DRUMSTICK "Build drumstick static library" ON)
+OPTION(STATIC_DRUMSTICK "Build drumstick static library" OFF)
 
 FIND_PACKAGE(KDE4 REQUIRED)
 INCLUDE(KDE4Defaults)
@@ -42,7 +42,7 @@ SEPARATE_ARGUMENTS(KDE4_DEFINITIONS)
 SEPARATE_ARGUMENTS(QT_DEFINITIONS)
 ADD_DEFINITIONS(${KDE4_DEFINITIONS})
 ADD_DEFINITIONS(${QT_DEFINITIONS})
-#ADD_DEFINITIONS(-DQT_STRICT_ITERATORS)
+ADD_DEFINITIONS(-DQT_STRICT_ITERATORS)
 
 MESSAGE(STATUS "Build configuration: ${CMAKE_BUILD_TYPE}")
 
