@@ -1,3 +1,9 @@
+2010-05-20 00:00 plcl
+
+    * Using an instrument definition file in .INS format
+    * Custom patterns
+    * Pattern editor
+
 2010-05-01 00:00 plcl
 
     * German translation, by Rene Landert
